<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.hamlet.MrFixer.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>

    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.hamlet.MrFixer.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.hamlet.MrFixer.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.hamlet.MrFixer.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />


    <fragment
        android:id="@+id/nav_contact"
        android:name="com.hamlet.MrFixer.ui.contact.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.hamlet.MrFixer.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_contact"></fragment>

    <fragment
        android:id="@+id/nav_shareApp"
        android:name="com.hamlet.MrFixer.ui.home.HomeFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_rateApp"
        android:name="com.hamlet.MrFixer.ui.home.HomeFragment"
        android:label="Rate app"
        tools:layout="@layout/fragment_home"></fragment>

</navigation>